# checking_service

./: .gitignore  README.md
client/android/checking/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
client/android/checking/app/src/main/: AndroidManifest.xml
client/android/checking/app/src/main/assets/res/: config.json  request.json
client/android/checking/app/src/main/assets/res/layout/: bar.xml  room.xml  root.xml  welcome.xml
client/android/checking/app/src/main/assets/res/layout/check/: calendar.xml  check.xml  choose_month_year.xml
client/android/checking/app/src/main/assets/res/layout/dialog/: dialog.xml
client/android/checking/app/src/main/assets/res/layout/register/: register.xml  register_old.xml
client/android/checking/app/src/main/assets/res/layout/welcome/: search_around.xml  search_box.xml  welcome.xml
client/android/checking/app/src/main/cpp/: native-lib.cpp
client/android/checking/app/src/main/java/com/bgate/nativeui/: ActivityHelper.java  CustomFunction.java  CustomImageView.java  CustomLabel.java  CustomSharedView.java  CustomTextField.java  CustomTextView.java  (+1 more)
client/android/checking/app/src/main/res/drawable/: rounded_background.xml
client/android/checking/app/src/main/res/layout/: activity_main.xml
service/: CMakeLists.txt  backup.sh  make_service.sh  restore.sh
service/include/service/: checking_service.h  local_supporter.h  types.h
service/javax/annotation/: Syntax.java
service/res/: config.json  create_check.json  create_device.json  create_dish.json  create_job.json  create_map.json  create_position.json  create_report.json  create_role.json  create_superior.json  create_user.json  create_work.json  request.json
service/res/checking_service/: index.json
service/res/checking_service/blocked_device/: map.json
service/res/checking_service/blocked_device/create/: create.json
service/res/checking_service/check/: map.json
service/res/checking_service/check/create/: create.json
service/res/checking_service/check/search/: search_by_date_by_user.json  search_by_id.json
service/res/checking_service/check/update/: update_check_out.json
service/res/checking_service/device/: map.json
service/res/checking_service/device/create/: create.json
service/res/checking_service/device/search/: search_by_id.json
service/res/checking_service/dish/: map.json
service/res/checking_service/dish/create/: create.json
service/res/checking_service/meal/: map.json
service/res/checking_service/meal/create/: create.json
service/res/checking_service/permission_add_employee/: map.json
service/res/checking_service/permission_add_employee/create/: create.json
service/res/checking_service/permission_add_work_time/: map.json
service/res/checking_service/permission_add_work_time/create/: create.json
service/res/checking_service/permission_clear_checkout/: map.json
service/res/checking_service/permission_clear_checkout/create/: create.json
service/res/checking_service/report/: map.json
service/res/checking_service/report/create/: create.json
service/res/checking_service/report_to/: map.json
service/res/checking_service/report_to/create/: create.json
service/res/checking_service/user/: map.json
service/res/checking_service/user/create/: create.json  search_by_username.json  update_validated.json
service/res/checking_service/user/delete/: delete_unvalidated.json
service/res/checking_service/user/search_free/: search_by_device.json  search_by_username_by_password.json
service/res/checking_service/user/search_valid/: search_by_username.json  search_by_username_has_permission_add_work_time.json  search_by_username_no_password.json  search_by_username_password_device.json
service/res/checking_service/work_time/: map.json
service/res/checking_service/work_time/create/: create.json
service/res/checking_service/work_time/search/: search_by_date_by_user.json  search_specific.json
service/res/checking_service/work_time/update/: update_time_start_date_start.json
service/res/supervisor/: index.json
service/res/supervisor/location/: create.json  delete_by_service_by_device_id.json  map.json  search_by_service_nearby.json  update_device_id.json  update_ip.json  update_latlng.json  update_port.json
service/res/supervisor/service/: create.json  map.json  search_nearby.json  update_name.json
service/res/test/: create_location.json  create_map.json  create_service.json  create_testtype.json  search_service.json  update.json  update_testtype.json
service/src/: main.c  main_old.c
service/src/checking_service/: checking_service.c
service/src/checking_service/inner_functions/: check_in.c  check_out.c  check_search_by_date_by_user.c  device_add.c  get_code.c  location_register.c  location_update_ip.c  location_update_latlng.c  location_update_public_ip.c  permission_add_employee.c  permission_add_work_time.c  permission_clear_checkout.c  service_register.c  service_validate.c  user_reserve.c  user_validate.c  work_time_new.c  work_time_search_by_date_by_user.c
service/src/checking_service/request/: functions.c
service/src/checking_service/request/version_1/: version.h
service/src/checking_service/request/version_1/check/: in.c  out.c  search_by_date_by_user.c
service/src/checking_service/request/version_1/device/: add.c  search.c
service/src/checking_service/request/version_1/location/: register.c  update_ip.c  update_latlng.c
service/src/checking_service/request/version_1/permission/: add_employee.c  add_work_time.c  clear_checkout.c
service/src/checking_service/request/version_1/service/: get_location_info.c  register_username.c  validate_username.c
service/src/checking_service/request/version_1/user/: reserve.c  search.c  validate.c
service/src/checking_service/request/version_1/work_time/: new.c  new_by_user.c  search_by_date_by_user.c  share.h
service/src/local_supporter/: local_supporter.c
service/src/local_supporter/request/: functions.c
service/src/local_supporter/request/version_1/: get_code.c  version.h
service/test_backup/: analyzer.json  data.json  mapping.json
(+193 files in other folders)
